--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(message: String, redirectUrl: String)
+@(message: String, redirectUrl: String)(implicit flash: Flash)
 
 @main("Welcome to Play") {
     <h2>Not Yet Authenticated</h2>
