--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,15 +1,91 @@
-@(title: String)(content: Html)
+@(title: String, nav: String = "")(content: Html)(implicit flash: Flash)
 
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
-    </head>
-    <body>
-        @content
-    </body>
+<head>
+    <title>@title</title>
+
+    <!-- Le meta -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Play Authenticate - an authentication module for the Play! Framework 2.0">
+    <meta name="author" content="The Play Authenticate Team">
+
+    <!-- Le scripts -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="@routes.Assets.at("js/bootstrap.min.js")"></script>
+
+    <!-- Le styles -->
+    <link href="@routes.Assets.at("css/main.css")" rel="stylesheet">
+    <link href="@routes.Assets.at("css/bootstrap.min.css")" rel="stylesheet">
+
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+
+<div class="navbar navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand" href="@routes.Application.index()">Play! Authenticate</a>
+
+            <div class="btn-group pull-right">
+                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+                    <i class="icon-user"></i> user.name
+                    <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a href="@routes.Application.blog()">@Messages("playauthenticate.navigation.profile")</a></li>
+                    <li class="divider"></li>
+                    <li><a href="@routes.Application.blog()">@Messages("playauthenticate.navigation.link_more")</a></li>
+                </ul>
+                <a href="@routes.Application.blog()" class="btn btn-primary btn-mini @("disabled".when(nav == "login"))">@Messages("playauthenticate.navigation.login")</a>
+            </div>
+
+
+            <div class="nav-collapse">
+                <ul class="nav">
+                    <li class="@("active".when(nav == ""))"><a href="@routes.Application.index()">@Messages("playauthenticate.navigation.home")</a></li>
+                    <li class="@("active".when(nav == "restricted"))"><a href="@routes.Application.blog()">@Messages("playauthenticate.navigation.restricted")</a></li>
+                    <li class="@("active".when(nav == "check"))"><a href="@routes.Application.blog()">Check</a></li>
+                    <li class="@("active".when(nav == "signup"))"><a href="@routes.Application.blog()">@Messages("playauthenticate.navigation.signup")</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    @if(flash.get(Application.FLASH_ERROR_KEY)) {
+    <div class="alert alert-error">
+        @flash.get(Application.FLASH_ERROR_KEY)
+    </div>
+    }
+    @if(flash.get(Application.FLASH_MESSAGE_KEY)) {
+    <div class="alert alert-success">
+        @flash.get(Application.FLASH_MESSAGE_KEY)
+    </div>
+    }
+    @content
+
+    <hr>
+
+    <footer>
+        <p>&copy; 2012-2014 Play! Authenticate. Licensed under Apache License, Version 2.0. View details <a href="https://github.com/joscha/play-authenticate/blob/master/LICENSE">here</a>.</p>
+        <p>
+            <small>Styles by <a href="http://twitter.github.com/bootstrap/index.html" target="_blank">Twitter Bootstrap</a> &middot; Provider icons by <a href="https://github.com/paulrobertlloyd/socialmediaicons/" target="_blank">Paul Robert Lloyd</a></small></p>
+    </footer>
+</div> <!-- /container -->
+
+</body>
 </html>
