--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -37,7 +37,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="@routes.Application.index()">Play! Authenticate</a>
+            <a class="brand" href="@routes.Application.index()">ITF</a>
 
             <div class="btn-group pull-right">
                 <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
